--- a/app/www/templates/login.html
+++ b/app/www/templates/login.html
@@ -3,11 +3,12 @@
         <div class="hero no-header flat">
             <div class="content">
                 <div class="app-icon"></div>
-                <!-- <h1>Easter Egg Hunt</h1> -->
+                <!-- <h1>Icc Mess</h1> -->
             </div>
         </div>
         <div class="padding">
-        <button class="button button-full icon-left ion-social-facebook button-positive-900 ink" ng-click="fbLogin()">Login</button>
+            <button class="button button-full icon-left ion-social-facebook button-positive-900 ink" ng-click="fbLogin()">Login</button>
+            <Button class="button button-full button-positive ink" ng-click="login()">Login</Button>
         </div>
     </ion-content>
 </ion-view>
