--- a/app/www/templates/login.html
+++ b/app/www/templates/login.html
@@ -7,8 +7,7 @@
             </div>
         </div>
         <div class="padding">
-            <button class="button button-full icon-left ion-social-facebook button-positive-900 ink" ng-click="fbLogin()">Login</button>
-            <Button class="button button-full button-positive ink" ng-click="login()">Login</Button>
+            <Button class="button button-full button-positive ink" ng-click="loginShow()">Login</Button>
         </div>
     </ion-content>
 </ion-view>
