--- a/app/www/templates/login/login.html
+++ b/app/www/templates/login/login.html
@@ -8,6 +8,8 @@
         </div>
         <div class="padding">
             <Button class="button button-full button-positive ink" ng-click="loginShow()">Login</Button>
+            <Button class="button button-full button-positive ink" ng-click="register()">Register</Button>
         </div>
+
     </ion-content>
 </ion-view>
