--- a/app/www/templates/menu.html
+++ b/app/www/templates/menu.html
@@ -11,21 +11,18 @@
     </ion-side-menu-content>
     <ion-side-menu side="left">
         <ion-header-bar class="dark-bg expanded">
-            <span class="avatar" style="background: url('img/crown.jpg'); background-size: cover;"></span>
+            <span class="avatar" style="background: url('img/icon.png'); background-size: cover; background-color: black;"></span>
             <h2>Easter Egg Hunt</h2>
         </ion-header-bar>
         <ion-content class="stable-bg has-expanded-header">
             <ion-list>
-                <ion-item nav-clear menu-close ui-sref="app.profile">
-                    Profile
+                <ion-item nav-clear menu-close ui-sref="app.calender">
+                    Attendence
                 </ion-item>
                 <ion-item nav-clear menu-close ng-click="logout()">
                     Logout
                 </ion-item>
             </ion-list>
-            <ion-item nav-clear menu-close ng-click="downloadAlmanac()">
-                Download Alamanac
-            </ion-item>
         </ion-content>
     </ion-side-menu>
 </ion-side-menus>
