--- a/app/www/templates/menu.html
+++ b/app/www/templates/menu.html
@@ -12,12 +12,15 @@
     <ion-side-menu side="left">
         <ion-header-bar class="dark-bg expanded">
             <span class="avatar" style="background: url('img/icon.png'); background-size: cover; background-color: black;"></span>
-            <h2>Easter Egg Hunt</h2>
+            <h2>Ic Mess App</h2>
         </ion-header-bar>
         <ion-content class="stable-bg has-expanded-header">
             <ion-list>
                 <ion-item nav-clear menu-close ui-sref="app.calender">
                     Attendence
+                </ion-item>
+                <ion-item nav-clear menu-close ui-sref="app.dashboard">
+                    DashBoard
                 </ion-item>
                 <ion-item nav-clear menu-close ng-click="logout()">
                     Logout
