--- a/app/www/templates/mess/calender.html
+++ b/app/www/templates/mess/calender.html
@@ -2,10 +2,10 @@
     <ion-content ng-class="{expanded:isExpanded}">
         <div class="list padding">
             <a ng-repeat="stringDate in attendance" class="">
-                <div ng-if="stringDate.present==1">
+                <div ng-show="stringDate.present==1">
                     <button ng-disabled="stringDate.editable==0" ng-click="setAbsent(stringDate.date)" class="item button icon-right ion-checkmark-round button-balanced">{{stringDate.dateString}}</button>
                 </div>
-                <div ng-if="stringDate.present==0">
+                <div ng-show="stringDate.present==0">
                     <button ng-disabled="stringDate.editable==0" ng-click="setPresent(stringDate.date)"class="item button icon-right ion-close-round button-assertive">{{stringDate.dateString}}</button>
                 </div>
             </a>
