--- a/app/www/templates/mess/dashBoard.html
+++ b/app/www/templates/mess/dashBoard.html
@@ -2,7 +2,7 @@
     <ion-content ng-class="{expanded:isExpanded}">
         <div class="card stable-bg list padding">
             <h4>Attendence and Cost</h4>
-            <div ng-if="!nodata">
+            <div ng-show="!nodata">
                 <span class="item">
                 Days Present : {{costDetails.daysPresent}}
                 </span>
@@ -10,7 +10,7 @@
                 Total Cost : {{costDetails.cost}} Rs
                 </span>
             </div>
-            <div ng-if="nodata">
+            <div ng-show="nodata">
                 <span class="item">
                 {{message}}
                 </span>
@@ -27,6 +27,16 @@
             <span class="item">
                 Duration : {{details.no_of_days}} Days
             </span>
+        </div>
+        <div class="card stable-bg list padding">
+            <h4>Mess Sec</h4>
+            <div ng-repeat="sec in details.sec">
+                <span class="item">
+                    <button ng-click="call(sec.phone)" class="button icon-left ion-ios-telephone button-balanced ink">
+                    {{sec.name}}  ({{sec.branch}})
+                    </button>
+                </span>
+            </div>
         </div>
         <div class="card stable-bg list padding">
             <h4>Mess Costs</h4>
