--- a/app/www/css/style.css
+++ b/app/www/css/style.css
@@ -237,3 +237,11 @@ p {
     text-align: center;
 
 }
+
+/*Popup
+==================================*/
+
+body div.popup-container.popup-showing.active div div.popup-body
+{
+  overflow: hidden;
+}
