create mess done

--- a/app/www/templates/forms/editMessForm.html
+++ b/app/www/templates/forms/editMessForm.html
@@ -13,7 +13,7 @@
         <!-- Buttons -->
         <span class="item button-bar">
             <!-- Login -->
-            <button ng-click="editMess(details)" ng-disabled="editMessForm.$invalid" class="button button-block button-calm ink activated" data-ink-color="#9DEAFF" data-ink-opacity="1">Submit</button>
+            <button ng-click="editMess()" ng-disabled="editMessForm.$invalid" class="button button-block button-calm ink activated" data-ink-color="#9DEAFF" data-ink-opacity="1">Submit</button>
         </span>
     </div>
 </form>
