sec add and remove done.

--- a/app/www/css/style.css
+++ b/app/www/css/style.css
@@ -245,3 +245,9 @@ body div.popup-container.popup-showing.active div div.popup-body
 {
   overflow: hidden;
 }
+
+#secList
+{
+  max-height: 40vh;
+  overflow: scroll;
+}
