--- a/app/www/templates/mess/dashBoard.html
+++ b/app/www/templates/mess/dashBoard.html
@@ -28,18 +28,22 @@
                 Duration : {{details.no_of_days}} Days
             </span>
         </div>
-        <div ng-click="addMessSec()" class="card stable-bg list padding">
-            <h4><i ng-show="profile.level>2" class="icon ion-edit"></i>Mess Sec</h4>
+        <div class="card stable-bg list padding">
+            <h4 ng-click="showAddSecPopover()"><i ng-show="profile.level>2" class="icon ion-edit"></i> Mess Sec</h4>
             <div ng-repeat="sec in details.sec">
                 <span class="item">
-                    <button ng-click="call(sec.phone)" class="button icon-left ion-ios-telephone button-balanced ink">
-                    {{sec.name}}  ({{sec.branch}})
+                <div class="item item-button-right">
+                    <i class="icon ion-edit" ng-click="deleteSec(sec.id, sec.name)"> {{sec.name}}  ({{sec.branch}})</i>
+                    <button class="button button-balanced ink" ng-click="call(sec.phone)">
+                        <i class="icon ion-ios-telephone"></i>
                     </button>
+                    <!-- <span ng-if="profile.level>2" class="icon ion-edit"></span> -->
+                </div>
                 </span>
             </div>
         </div>
         <div ng-click="showEditMessForm()" class="card stable-bg list padding">
-            <h4><i ng-show="profile.level>2" class="icon ion-edit"></i>Mess Costs</h4>
+            <h4><i ng-show="profile.level>2" class="icon ion-edit"></i> Mess Costs</h4>
             <span class="item">
                 Establishment Fee : {{details.establishment}} Rs
             </span>
