--- a/app/www/templates/forms/createMessForm.html
+++ b/app/www/templates/forms/createMessForm.html
@@ -8,7 +8,7 @@
         <!-- No of days -->
         <label class="item item-input item-floating-label">
             <span class="input-label">No of Days</span>
-            <input required type="number" ng-model="createMessDetails.no_of_days" placeholder="No of Days">
+            <input type="number" ng-model="createMessDetails.no_of_days" placeholder="No of Days">
         </label>
         <!-- Buttons -->
         <span class="item button-bar">
