--- a/app/www/css/style.css
+++ b/app/www/css/style.css
@@ -22,119 +22,6 @@ h1 {
 .horizontal_center{
   text-align: center!important;
 }
-/*Tic Tac Toe
-==================================*/
-body {
-  font-family: "Coming Soon", cursive;
-  background-color: #e8dbb6;
-}
-
-aside.leftmargin {
-  width: 165px;
-  border-right: 2px solid #ff3388;
-  height: 1122px;
-  top: 0; left: 0;
-  z-index: 2;
-  overflow-x: hidden;
-}
-
-div.holes {
-  background-image: radial-gradient(#e8dbb6 12px, transparent 15px);
-  background-size: 450px 450px;
-  background-position: 0 0;
-  width: 450px;
-  height: 1150px;
-  margin-left: -170px;
-  margin-top: -110px;
-}
-
-header.topmargin {
-  background-color: #fff;
-  padding-left: 165px;
-  height: 110px;
-  position: relative;
-
-}
-
-h1.margin-title {
-  top: 50px;
-  font-size: 50px;
-  padding-left: 15px;
-  font-family: 'UnifrakturCook'; 
-}
-
-h2.stamp {
-  top: 85px;
-  right: 320px;
-  color: red;
-  font-family: 'Black Ops One';
-}
-
-.main {
-  margin-left: 165px;
-  min-height: 500px;
-  padding: 15px 30px 0 15px;
-}
-
-footer.bottommargin {
-  width: 100%;
-  background-color: white;
-  bottom: 1px;
-  height: 32px;
-}
-
-.annoucement {
-  font-size: 3.5rem;
-  height: 3rem;
-  text-indent: 13rem;
-}
-
-#board {
-  width: 45rem;
-  height: 45rem;
-  margin-top: 2em;
-  margin-left: 2em;
-}
-
-.row {
-  width: 45rem;
-  height: 15rem;
-  border-bottom: .375rem solid black;
-}
-
-.space {
-  width: 15rem;
-  height: 15rem;
-  border-right: .375rem solid black;
-  position: relative;
-}
-
-.letter {
-  width: 18rem;
-  height: 18rem;
-  font-size: 9em;
-  text-align: center;
-  margin: auto; 
-  top: 0; right: 0; bottom: .09375em; /* text sits at bottom of el */
-  left: 0;
-}
-
-.last, 
-.space:nth-child(3), 
-.row:nth-child(3) {
-  border: none;
-}
-
-
-a, 
-a:link,
-a:visited,
-a:hover,
-a:active {
-  text-decoration: none;
-  color: rgb(51, 51, 51);
-  cursor: pointer;
-}
 
 /* Utilities
 ==================================*/
@@ -249,5 +136,11 @@ body div.popup-container.popup-showing.active div div.popup-body
 #secList
 {
   max-height: 40vh;
+  overflow: scroll;
+}
+
+#editProfilePopover
+{
+  max-height: 80vh;
   overflow: scroll;
 }
