--- a/app/www/templates/forms/addMessSecForm.html
+++ b/app/www/templates/forms/addMessSecForm.html
@@ -1,8 +1,14 @@
 <form name="addMessSecForm">
     <div class="list card vertical_center">
+        <div>
+            <label class="item item-input item-icon-right">
+                <input required type="text" ng-model="searchText" placeholder="Filter">
+                <i class="icon ion-android-search"></i>
+            </label>
+        </div>
         <!-- Mess Secs -->
         <div id="secList">
-            <div ng-repeat="sec in nameList">
+            <div ng-repeat="sec in nameList | filter:searchText">
                 <div class="item item-checkbox">
                     <label class="checkbox">
                         <input ng-model="sec.checked" type="checkbox" value="on">
