--- a/app/www/templates/forms/addMessSecForm.html
+++ b/app/www/templates/forms/addMessSecForm.html
@@ -2,7 +2,7 @@
     <div class="list card vertical_center">
         <div>
             <label class="item item-input item-icon-right">
-                <input required type="text" ng-model="searchText" placeholder="Filter">
+                <input type="text" ng-model="searchText" placeholder="Filter">
                 <i class="icon ion-android-search"></i>
             </label>
         </div>
