--- a/app/www/templates/menu.html
+++ b/app/www/templates/menu.html
@@ -17,24 +17,22 @@
         <ion-content class="stable-bg has-expanded-header">
             <ion-list>
                 <ion-item nav-clear menu-close ui-sref="app.calender">
-                   <i class="icon ion-clipboard"></i>
-                    Attendence
+                    <i class="icon ion-clipboard"></i> Attendence
                 </ion-item>
                 <ion-item nav-clear menu-close ui-sref="app.dashboard">
-                   <i class="icon ion-speedometer"></i>
-                    DashBoard
+                    <i class="icon ion-speedometer"></i> DashBoard
                 </ion-item>
                 <ion-item nav-clear menu-close ui-sref="app.profile">
-                   <i class="icon ion-person"></i>
-                    Profile
+                    <i class="icon ion-person"></i> Profile
                 </ion-item>
                 <ion-item nav-clear menu-close ui-sref="app.admin" ng-show="profile.level>1">
-                   <i class="icon ion-ios-gear"></i>
-                    Admin Panel
+                    <i class="icon ion-ios-gear"></i> Admin Panel
+                </ion-item>
+                <ion-item nav-clear menu-close ui-sref="app.feedback">
+                    <i class="icon ion-ios-paper"></i> FeedBack
                 </ion-item>
                 <ion-item nav-clear menu-close ng-click="logout()">
-                   <i class="icon ion-log-out"></i>
-                    Logout
+                    <i class="icon ion-log-out"></i> Logout
                 </ion-item>
             </ion-list>
         </ion-content>
