--- a/app/www/templates/mess/admin.html
+++ b/app/www/templates/mess/admin.html
@@ -38,7 +38,7 @@
             <div ng-show="expandPendingCard">
                 <div>
                     <label class="item item-input item-icon-right">
-                        <input required type="text" ng-model="searchText" placeholder="Filter">
+                        <input  type="text" ng-model="searchText" placeholder="Filter">
                         <i class="icon ion-android-search"></i>
                     </label>
                 </div>
@@ -61,7 +61,7 @@
             <div ng-show="expandAcceptedCard">
                 <div>
                     <label class="item item-input item-icon-right">
-                        <input required type="text" ng-model="searchText" placeholder="Filter">
+                        <input  type="text" ng-model="searchText" placeholder="Filter">
                         <i class="icon ion-android-search"></i>
                     </label>
                 </div>
@@ -84,7 +84,7 @@
             <div ng-show="expandBarredCard">
                 <div>
                     <label class="item item-input item-icon-right">
-                        <input required type="text" ng-model="searchText" placeholder="Filter">
+                        <input type="text" ng-model="searchText" placeholder="Filter">
                         <i class="icon ion-android-search"></i>
                     </label>
                 </div>
