--- a/app/www/templates/mess/admin.html
+++ b/app/www/templates/mess/admin.html
@@ -26,73 +26,31 @@
         <div class="card stable-bg list padding" ng-show="!(showPendingCard || showAcceptedCard || showBarredCard)" ng-click="getPending()">
             <h4>Show Student List</h4>
         </div>
-        <div class="card stable-bg list padding" ng-show="showPendingCard">
-            <div ng-click="expandPendingCard=!expandPendingCard">
-                <div style="float: left;">
-                    <h4>Pending List</h4>
-                </div>
-                <div style="float: right;">
-                    <h4><i class="icon ion-arrow-down-b" ng-if="!expandPendingCard"></i><i class="icon ion-arrow-up-b" ng-if="expandPendingCard"></i></h4>
-                </div>
-            </div>
-            <div ng-show="expandPendingCard">
-                <div>
-                    <label class="item item-input item-icon-right">
-                        <input  type="text" ng-model="searchText" placeholder="Filter">
-                        <i class="icon ion-android-search"></i>
-                    </label>
-                </div>
-                <a ng-click="changeStatus(person.id,person.name,1)" ng-repeat="person in personList | filter:searchText" class="">
-                    <span ng-show="person.status==0" class="item">
-                    <h3>{{person.name}} ({{person.branch}})</h3>
-                    </span>
+        <div class="card stable-bg list padding" ng-show="showCard">
+            <div class="item tabs tabs-secondary tabs-icon-left">
+                <a class="tab-item" ng-click="checkStatus=0" data-ink-color="#336699" data-ink-opacity="0.5">
+                    <i class="icon ion-clock"></i> Pending
+                </a>
+                <a class="tab-item" ng-click="checkStatus=1" data-ink-color="#336699" data-ink-opacity="0.5">
+                    <i class="icon ion-checkmark-round"></i> Accepted
+                </a>
+                <a class="tab-item" ng-click="checkStatus=2" data-ink-color="#336699" data-ink-opacity="0.5">
+                    <i class="icon ion-close-round"></i> Barred
                 </a>
             </div>
-        </div>
-        <div class="card stable-bg list padding" ng-show="showAcceptedCard">
-            <div ng-click="expandAcceptedCard=!expandAcceptedCard">
-                <div style="float: left;">
-                    <h4>Accepted List</h4>
-                </div>
-                <div style="float: right;">
-                    <h4><i class="icon ion-arrow-down-b" ng-if="!expandAcceptedCard"></i><i class="icon ion-arrow-up-b" ng-if="expandAcceptedCard"></i></h4>
-                </div>
+            <div >
+                <label class="item item-input item-icon-right">
+                    <input type="text" ng-model="searchText" placeholder="Filter">
+                    <i class="icon ion-android-search"></i>
+                </label>
             </div>
-            <div ng-show="expandAcceptedCard">
-                <div>
-                    <label class="item item-input item-icon-right">
-                        <input  type="text" ng-model="searchText" placeholder="Filter">
-                        <i class="icon ion-android-search"></i>
-                    </label>
-                </div>
-                <a ng-click="changeStatus(person.id,person.name,2)" ng-repeat="person in personList | filter:searchText" class="">
-                    <span ng-show="person.status==1" class="item">
+            <div id="personLis" >
+                
+            <a ng-click="changeStatus(person.id,person.name,checkStatus+1)" ng-repeat="person in personList | filter:searchText" class="">
+                <span ng-show="person.status==checkStatus" class="item">
                     <h3>{{person.name}} ({{person.branch}})</h3>
                     </span>
-                </a>
-            </div>
-        </div>
-        <div class="card stable-bg list padding" ng-show="showBarredCard">
-            <div ng-click="expandBarredCard=!expandBarredCard">
-                <div style="float: left;">
-                    <h4>Barred List</h4>
-                </div>
-                <div style="float: right;">
-                    <h4><i class="icon ion-arrow-down-b" ng-if="!expandBarredCard"></i><i class="icon ion-arrow-up-b" ng-if="expandBarredCard"></i></h4>
-                </div>
-            </div>
-            <div ng-show="expandBarredCard">
-                <div>
-                    <label class="item item-input item-icon-right">
-                        <input type="text" ng-model="searchText" placeholder="Filter">
-                        <i class="icon ion-android-search"></i>
-                    </label>
-                </div>
-                <a ng-click="changeStatus(person.id,person.name,1)" ng-repeat="person in personList | filter:searchText" class="">
-                    <span ng-show="person.status==2" class="item">
-                    <h3>{{person.name}} ({{person.branch}})</h3>
-                    </span>
-                </a>
+            </a>
             </div>
         </div>
     </ion-content>
