--- a/app/www/templates/forms/createMessForm.html
+++ b/app/www/templates/forms/createMessForm.html
@@ -2,7 +2,7 @@
     <div class="list card vertical_center">
         <!-- Start Date -->
         <label class="item item-input item-floating-label">
-            <span class="input-label">Start Date</span>
+            <span class="">Start Date</span>
             <input required type="date" ng-model="createMessDetails.startDate" placeholder="Start Date">
         </label>
         <!-- No of days -->
