--- a/app/www/templates/forms/registerForm.html
+++ b/app/www/templates/forms/registerForm.html
@@ -43,7 +43,7 @@
         </label>
         <!-- DOB -->
         <label class="item item-input item-floating-label">
-            <span class="input-label">Date of Birth</span>
+            <span class="">Date of Birth</span>
             <input type="date" ng-model="user.dob" placeholder="Date of Birth">
         </label>
         <!-- Mobile -->
