fixes #2, new mess md add option

--- a/app/www/templates/forms/loginForm.html
+++ b/app/www/templates/forms/loginForm.html
@@ -12,7 +12,9 @@
         </label>
         <!-- Remember me -->
         <div class="item item-checkbox">
-            <input type="checkbox" ng-model="login.Remember" value="on"></input>
+            <label class="checkbox">
+                <input type="checkbox" ng-model="login.Remember" value="on"></input>
+            </label>
             Remember me
         </div>
         <!-- Buttons -->
